src/objects/Old_Payments__c.object
<CustomObject>
    <description>Legacy payments object</description>
    <fields>
        <fullName>Actual_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pride Applications</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>Number that Accounting assigns to each batch of deposits.</description>
        <label>Batch Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <description>Number that appears on the check with which payment was made.</description>
        <label>Check Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001AJWaEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N30000001AJXXEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001BT2HEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expected Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forcast_Amount__c</fullName>
        <formula>Payment_Amount__c  *  Probablility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forcast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Code__c</fullName>
        <label>Grant Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payments1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid_Locally_to_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the payment goess directly to our local partner.</description>
        <label>Paid Locally to Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payee_Code__c</fullName>
        <label>Payee Code</label>
        <picklist>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Memorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aveda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earthshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Comments__c</fullName>
        <label>Payment Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiannually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_of_Grant__c</fullName>
        <label>Percent of Grant</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pledge_Made_Date__c</fullName>
        <label>Pledge Made Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probablility__c</fullName>
        <label>Probablility</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipName>R00N30000001AJXZEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Old Payments</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Payments</pluralLabel>
    <recordTypes>
        <fullName>GrantPayment</fullName>
        <active>true</active>
        <description>Used for Grant Payments made by individuals or institutions</description>
        <label>Grant Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>IndividualPayment</fullName>
        <active>true</active>
        <description>Used for individual unrestricted donations</description>
        <label>Individual Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProposalExpectedPayment</fullName>
        <active>true</active>
        <description>Used for individual or institution proposal, if won expected payment</description>
        <label>Proposal Expected Payment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>